@@ -1,4 +1,8 @@
 
+VERSION "4.3.92"
+added -no_space_after_note flag
+added -no_space_before_note flag
+
 VERSION "4.3.91"
 correction to -h (convert) option
 silenced a few compilation error warnings
